--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
-    "migrate":"sequelize-cli migration:generate"
+    "migrate": "sequelize-cli migration:generate"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
     "express": "^4.17.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.12.4"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.12.5",
+    "sequelize-typescript": "^2.1.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.5",
+    "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
