--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
     "express": "^4.17.2",
+    "express-joi-validation": "^5.0.1",
+    "joi": "^17.5.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
