--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.5.0",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.5",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
