--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
-    "migrate": "sequelize-cli migration:generate"
+    "migrate": "sequelize-cli migration:generate",
+    "migrations:run":"npx sequelize-cli db:migrate"
   },
   "dependencies": {
     "@types/amqplib": "^0.8.2",
